# PersonalAIs

./: Readme.md
client/: package-lock.json  package.json
client/public/animations/: astraunut_music.lottie
client/src/app/: layout.tsx  nav_bar.tsx  page.tsx
client/src/app/_components/: nav-group.tsx  nav-user.tsx  sidebar.tsx  signin-button.tsx  signout-button.tsx
client/src/app/_landing/: hero_section.tsx  landing_page.tsx  nav_bar.tsx
client/src/app/app/: layout.tsx  page.tsx
client/src/components/: logo.tsx
client/src/components/ui/: floating-navbar.tsx
client/src/lib/: axios.ts
client/src/lib/store/: auth.ts
server/: .dockerignore  README.md  pyproject.toml
server/src/: __init__.py  app.py  main.py
server/src/api/: __init__.py
server/src/api/v1/: routes.py
server/src/api/v1/endpoints/: __init__.py  auth.py  session.py  user.py
server/src/api/v1/middlewares/: __init__.py  auth_middleware.py
server/src/core/: config.py  container.py  exceptions.py
server/src/dtos/: __init__.py  auth_dto.py  session_dto.py  spotify_credentials_dto.py  user_dto.py
server/src/models/: __init__.py  accounts_schema.py  base_models.py  sessions_model.py  sessions_schema.py  spotify_credentials_model.py  users_model.py
server/src/repository/: __init__.py  base_repo.py  session_repo.py  spotify_credentials_repo.py  user_repo.py
server/src/services/: __init__.py  auth_service.py  session_service.py  spotify_credentials_service.py  user_service.py
server/src/utils/: custom_json_encoder.py  helper_functions.py  jwt_utils.py  logger.py
(+3 files in other folders)
